Fix video-block height on mobile (#200)

--- a/src/scss/common/_video-block.scss
+++ b/src/scss/common/_video-block.scss
@@ -9,6 +9,7 @@
 	}
 
 	.video-section {
+		height: 240px;
 
 		@include small-and-up {
 			height: 240px;
